syntax = "proto3";
option csharp_namespace = "Library.Grpc";

package library;

message Empty {}

message BookId { int64 id = 1; }
message UserId { int64 id = 1; }

message TimeRange {
  string from = 1; // ISO 8601
  string to = 2;
}

message Book {
  int64 id = 1;
  string title = 2;
  int32 pages = 3;
}

message BorrowRecord {
  int64 id = 1;
  int64 bookId = 2;
  int64 userId = 3;
  string borrowedAt = 4; // ISO 8601
  string returnedAt = 5; // optional ISO 8601
}

message TopBooksRequest { int32 limit = 1; TimeRange range = 2; }
message TopBooksResponse {
  repeated BookCount items = 1;
}
message BookCount { Book book = 1; int32 borrowCount = 2; }

message TopUsersRequest { int32 limit = 1; TimeRange range = 2; }
message TopUsersResponse { repeated UserCount items = 1; }
message UserCount { int64 userId = 1; int32 borrowCount = 2; }

message ReadingPaceRequest { int64 userId = 1; int64 bookId = 2; }
message ReadingPaceResponse { double pagesPerDay = 1; }

message AlsoBorrowedRequest { int64 bookId = 1; int32 limit = 2; }
message AlsoBorrowedResponse { repeated BookCount items = 1; }

service LibraryService {
  rpc GetMostBorrowedBooks(TopBooksRequest) returns (TopBooksResponse);
  rpc GetTopBorrowers(TopUsersRequest) returns (TopUsersResponse);
  rpc EstimateReadingPace(ReadingPaceRequest) returns (ReadingPaceResponse);
  rpc GetAlsoBorrowed(AlsoBorrowedRequest) returns (AlsoBorrowedResponse);
}
